# COM7019_AI-NN

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  backpropagation.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
_code/: COM7019_25199053.ipynb
_code/output/models/: model_summaries.txt
_code/output/tables/: results_all_runs.csv  results_comparison_enriched.csv
assignment/: DRAFT_REPORT.md  RESULTS_LEDGER.md
assignment/notebook/: COM7019_25199053.ipynb
assignment/outputs/models/: model_summaries.txt
assignment/outputs/tables/: results_all_runs.csv
docs/: METHODOLOGY.md  TUTOR_FEEDBACK_IMPLEMENTATION.md
notebook/: COM7019_25199053.ipynb
results/models/: model_summaries.txt
results/tables/: results_all_runs.csv  results_comparison_enriched.csv
scripts/: _notebook_tail.py  patch_notebook_surgical.py  patch_notebook_viz_v2.py  upgrade_notebook.py
src/com7019/: __init__.py  cli.py  config.py  data.py  evaluation.py  visualization.py
workshops/: gradient_descent.ipynb  optimisation.ipynb
